<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <artifactId>org.commonreality.sensors</artifactId>
   <parent>
   <groupId>org.commonreality</groupId>
   <artifactId>org.commonreality.distro</artifactId>
   <version>1.5.0-SNAPSHOT</version>
   <relativePath>../org.commonreality.distro/pom.xml</relativePath>
  </parent>
  <packaging>jar</packaging>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.commonreality</groupId>
  		<artifactId>org.commonreality.time</artifactId>
  		<version>1.5.0-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>org.commonreality</groupId>
  		<artifactId>org.commonreality.core</artifactId>
  		<version>1.5.0-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>org.commonreality</groupId>
  		<artifactId>org.commonreality.api</artifactId>
  		<version>1.5.0-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>org.commonreality</groupId>
  		<artifactId>org.commonreality.modalities</artifactId>
  		<version>1.5.0-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>org.commonreality</groupId>
  		<artifactId>org.commonreality.net</artifactId>
  		<version>1.5.0-SNAPSHOT</version>
  	</dependency>
  </dependencies>
</project>